# im-relation

./: .gitignore  Cargo.toml  Makefile  README.md  WORKSPACE.md  config-api.toml  config-arb.toml  config-friend.toml  config-group.toml  config-msg-friend.toml  config-msg-group.toml  config-msg-system.toml  config-online.toml  config-socket.toml  config-user.toml  friend-config.toml  group-config.toml  online-config.toml  rebuild_and_start.sh  run_macos.sh
app_api/: Cargo.toml  build.rs
app_api/proto/: auth.proto
app_api/resource/: languages.json
app_api/src/: lib.rs  main.rs  server.rs  server_grpc.rs  server_web.rs  swagger.rs
app_api/src/grpc/: api.rs  arb_server.rs  auth.rs  client_service.rs  extend.rs  mod.rs
app_api/src/grpc_arb/: arb_server.rs  mod.rs
app_api/src/grpc_arb_client/: integration.rs  server.rs
app_api/src/grpc_hot_online/: auth.rs  client_service.rs  mod.rs  online_service.rs
app_api/src/handler/: common_handler.rs  friends_handler.rs  group_handler.rs  login_handler.rs  mod.rs  register_handler.rs  socket_handler.rs  swagger.rs  sync_handler.rs  user_handler.rs  user_handler_types.rs  utils.rs
app_api/src/service/: api_grpc_service.rs  api_grpc_service_impl.rs  arb_client_service_impl.rs  arb_server_service.rs  auth_models.rs  client_rpc_service_impl.rs  friend_gateway.rs  group_gateway.rs  grpc_gateway.rs  message_gateway.rs  mod.rs  online_rpc_service_impl.rs  session.rs  user_gateway.rs  user_service.rs  user_service_impl.rs
app_api/src/util/: mod.rs  node_util.rs  rpc_client_util.rs
app_test/: build.rs  (+1 more)
arb-service/: Cargo.toml  build.rs
arb-service/proto/: arb_server.proto
arb-service/src/: main.rs
arb-service/src/grpc/: arb_server.rs  mod.rs
arb-service/src/grpc_arb/: client.rs  mod.rs
arb-service/src/service/: arb_server_rpc_service.rs
flutter_sdk/: Cargo.toml  GENERATED.md  build.rs  database.sqlite
flutter_sdk/docs/: friend_established_sequence.md
flutter_sdk/scripts/: regenerate_frb.sh
flutter_sdk/src/: config.rs  frb_generated.rs  lib.rs
flutter_sdk/src/api/: app_api.rs  app_api_types.rs  chat_api.rs  client.rs  config_api.rs  errors.rs  frb_types.rs  friend_api.rs  friend_request_api.rs  group_request_api.rs  log_api.rs  login_api.rs  login_api_types.rs  mod.rs  reg_api.rs  reg_api_types.rs  socket_api.rs  sync_api.rs  types.rs  user_api.rs  user_api_types.rs  utils.rs
flutter_sdk/src/common/: client.rs  db.rs  logging.rs  mod.rs  repository.rs  schema.rs
flutter_sdk/src/domain/: config_entity.rs  conversation_entity.rs  friend_entity.rs  friend_request_entity.rs  group_entity.rs  group_member_entity.rs  group_request_entity.rs  local_system_message_entity.rs  log_entity.rs  message_entity.rs  mod.rs  proto_adapter.rs  read_cursor_entity.rs  sync_state_entity.rs  user_entity.rs
flutter_sdk/src/job/: message_job.rs  mod.rs
flutter_sdk/src/service/: auth_service.rs  config_service.rs  conversation_service.rs  friend_request_service.rs  friend_service.rs  group_member_service.rs  group_request_service.rs  group_service.rs  local_system_message_service.rs  log_service.rs  message_service.rs  mod.rs  online_service.rs  read_cursor_service.rs  socket_client.rs  sync_service.rs  sync_state_service.rs  user_service.rs
flutter_sdk/tests/: login_socket.rs
friend-service/: Cargo.toml
friend-service/migrations/: mysql_schema.sql
friend-service/proto/: friend_service.proto
friend-service/src/: autotune.rs  hot_cold.rs  hot_shard_store.rs  main.rs
friend-service/src/db/: elias_fano.rs  friend_list_ef.rs  mod.rs
friend-service/src/grpc/: friend_service.rs  friend_service_impl.rs  mod.rs
friend-service/src/store/: mysql.rs
group-service/: Cargo.toml  build.rs
group-service/migrations/: mysql_schema.sql
group-service/proto/: group_service.proto  hash_shard_map.proto
group-service/src/: common.rs  hot_cold.rs  main.rs
group-service/src/db/: group.rs  hash_shard_map.rs  member_list_wrapper.rs  mod.rs
group-service/src/grpc/: group_service.rs  group_service_impl.rs
group-service/src/member/: mod.rs  shard_map.rs
group-service/src/persist/: mod.rs  snapshot.rs  snapshot_task.rs
group-service/src/profile/: cache.rs  mod.rs  mysql_storage.rs  storage.rs
group-service/src/store/: mod.rs  mysql.rs
hot_friend_service/: Cargo.toml  build.rs
hot_friend_service/src/: autotune.rs  hot_cold.rs  hot_shard_store.rs  main.rs  server.rs
hot_friend_service/src/db/: elias_fano.rs  mod.rs
hot_friend_service/src/grpc_hot_friend/: friend_service.rs  mod.rs
hot_friend_service/src/server/: mod.rs  server_grpc.rs
hot_friend_service/src/service/: friend_service_impl.rs  mod.rs
hot_friend_service/src/store/: mysql.rs
hot_group_service/: Cargo.toml  build.rs
hot_group_service/proto/: group_service.proto
hot_group_service/src/: hot_capacity.rs  hot_cold.rs  main.rs  server.rs
hot_group_service/src/grpc/: group_service_impl.rs
hot_group_service/src/grpc_arb_client/: server.rs
hot_group_service/src/grpc_msg_group/: group_service.rs  group_service_impl.rs  mod.rs
hot_group_service/src/member/: list_wrapper.rs  mod.rs  shard_map.rs
hot_group_service/src/profile/: cache.rs  mysql_storage.rs
hot_group_service/src/server/: mod.rs
hot_online_service/: Cargo.toml  build.rs
hot_online_service/migrations/: mysql_schema.sql
hot_online_service/proto/: auth.proto  client_entity.proto  online.proto
hot_online_service/src/: hot_cold.rs  main.rs  online_store.rs  rest_online.rs  server.rs
msg_friend/: Cargo.toml  build.rs
msg_friend/migrations/: mysql_schema.sql
msg_friend/proto/: friend.proto
msg_friend/src/: hot_friend_client.rs  index.rs  main.rs
msg_group/: Cargo.toml  build.rs
msg_group/migrations/: mysql_schema.sql
msg_group/proto/: group.proto  group_message.proto
msg_group/src/: arb_integration.rs  lib.rs  main.rs  server.rs
msg_system/: Cargo.toml
msg_system/migrations/: mysql_schema.sql
msg_system/src/: main.rs
user_service/: Cargo.toml
user_service/migrations/: mysql_schema.sql
user_service/src/: hot_cold.rs  main.rs  online_store.rs  rest_online.rs
(+590 files in other folders)
