[package]
name = "app_api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true
validator.workspace = true
fxhash.workspace = true
dashmap.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
roaring.workspace = true
actix-web.workspace = true
sqlx.workspace = true
moka.workspace = true
prost.workspace = true
tonic.workspace = true
prost-types.workspace = true
utoipa.workspace = true
num_cpus.workspace = true
deadpool-redis.workspace = true
sysinfo.workspace = true
log.workspace = true
once_cell.workspace = true
arc-swap.workspace = true
regex.workspace = true
rand = "0.8.5"
actix-files = "0.6.6"
handlers = "0.10.0"
[build-dependencies]
protobuf-src = { version = "^2.1.0", optional = true }
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.1"
prost-build = "0.14.1"
