[package]
name = "app_api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true
validator.workspace = true
fxhash.workspace = true
dashmap.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
roaring.workspace = true
axum.workspace = true
sqlx.workspace = true
moka.workspace = true
prost.workspace = true
tonic.workspace = true
prost-types.workspace = true
utoipa.workspace = true
num_cpus.workspace = true
deadpool-redis.workspace = true
sysinfo.workspace = true
log.workspace = true
once_cell.workspace = true
arc-swap.workspace = true
regex.workspace = true
rand = "0.8.5"
tower-http.workspace = true
handlers = "0.10.0"
