[package]
name = "flutter_sdk"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[workspace]

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow = "1.0.98"
directories = "6.0"
flutter_rust_bridge = "=2.11.1"
once_cell = "1.21.3"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bytes = "1.4"
tokio-stream = "0.1.7"
tokio-util = { version = "0.7.14", features = ["codec"] }
tokio = { version = "1.13.1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.13.1", default-features = true }
uuid = { version = "1.10.0", features = ["v4"] }
log = "0.4.28"
prost = "0.13.5"
prost-types = "0.13.5"
futures-util = "0.3"
base64 = "0.21.4"

[profile.dev]
debug = true
opt-level = 0
[profile.test]
debug = true
opt-level = 0
[build-dependencies]
tonic-build = "0.13.1"
prost-build = "0.13.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
