[package]
name = "group-service-full"
version = "0.1.1"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde .workspace = true
serde_json = "1"
ahash .workspace = true
dashmap.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
roaring.workspace = true
actix-web.workspace = true
sqlx.workspace = true
bincode.workspace = true
moka.workspace = true

tempfile.workspace = true

tracing-subscriber.workspace = true
prost.workspace = true                         # Protobuf 编解码
num_enum.workspace = true                      # 数值枚举转换支持
tonic.workspace = true
prost-types.workspace = true
tracing.workspace = true
utoipa.workspace = true
[build-dependencies]
protobuf-src = { version = "^2.1.0", optional = true }
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.1"
prost-build = "0.14.1"

