
[package]
name = "hot_online_service"
version = "0.2.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json = "1.0.142"
argon2.workspace = true
rand_core.workspace = true
ahash.workspace = true
fxhash.workspace = true
dashmap.workspace = true
smallvec.workspace = true
parking_lot.workspace = true
roaring.workspace = true
actix-web.workspace = true
sqlx.workspace = true
moka = { version = "0.12.10", default-features = false, features = ["future"] }
singleflight={ version = "0.3.0"}
crossbeam-utils={ version = "0.8.5"}
prost.workspace = true
tonic.workspace = true
prost-types.workspace = true
utoipa.workspace = true
num_cpus.workspace = true
sysinfo.workspace = true
log.workspace = true
once_cell = "1.21.3"
bytes = "1.10.1"
time = "0.3.41"
futures = "0.3.31"
hex = "0.4.3"
idna = "1.0.3"
regex = "1.11.1"
unicode-normalization = "0.1.24"
env_logger = "0.11.8"
[build-dependencies]
protobuf-src = { version = "^2.1.0", optional = true }
tonic = "0.13.1"
tonic-build = "0.13.1"
prost = "0.13.1"
prost-build = "0.14.1"

