[package]
name = "msg_friend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
anyhow.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
twox-hash.workspace = true
log.workspace = true
utoipa.workspace = true
chrono.workspace = true
once_cell.workspace = true

[features]
default = []
tantivy = ["dep:tantivy"]

[dependencies.tantivy]
version = "0.20.2"
optional = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
