[package]
name = "msg_group"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
once_cell.workspace = true
log.workspace = true
common = { path = "../common" }
sqlx.workspace = true
axum.workspace = true
base64.workspace = true

[build-dependencies]
tonic-build.workspace = true
prost-build.workspace = true
