[package]
name = "msg_system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
common = { path = "../common" }
log.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
twox-hash.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
